Version 2.02.99 - 
===================================
  Add detection for thin pool metadata resize kernel support.
  Report lvs volume type 'e' with higher priority.
  Report lvs volume type 'o' also for external origin volumes.
  Report lvs target type 't' only for thin pools and thin volumes.
  Fix test for active snapshot in cluster before resizing it.
  Report backtrace from dump filter error path.
  Do not use persistent filter with lvmetad.
  Composable persistent filter functionality for global filter.
  Override system's global_filter settings for vgimportclone.
  Detect maximum usable size for snapshot for lvresize.
  Creation of snapshot takes at most 100% origin coverage.
  Add cow_max_extents() to calc extents for 100% origin coverage.
  For creation of snapshot require size for at least 3 chunks.
  Fix lvresize --use-policies of VALID but 100% full snapshot.
  Do not accept size parameters bigger then 16EiB.
  Fix release of PV's fid in free_pv_fid().
  Skip monitoring of snapshots that are already bigger then origin.
  Add lv_is_cow_covering_origin() to check if cow covers origin size.
  Use libdm dm_get_status_snapshot() to parse snapshot status.
  Add detection of mounted fs also for vgchange deactivation.
  Replace 'lv_is_active' with more correct/specific variants (e.g. *_locally).
  Refuse to init a snapshot merge in lvconvert if there's no kernel support.
  Fix exported symbols regex for non-GNU busybox sed.
  Accept --yes in all commands so test scripts can be simpler.
  Fix alignment of PV data area if detected alignment less than 1 MB (2.02.74).
  Fix memory resource leak in memlocking error path.
  Fix premature DM version checking which caused useless mapper/control access.
  Add "active" LV reporting field to show activation state.
  Add "monitor" segment reporting field to show dmevent monitoring status.
  Document lvextend --use-policies option in man.
  Fix creation and removal of clustered snapshot.